# cmake_product_line

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GRPC_MIGRATION.md  README.md
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/ProductBuilder/: IProductBuilder.h  Product1Builder.cpp  Product1Builder.h  Product2Builder.cpp  Product2Builder.h  Product3Builder.cpp  Product3Builder.h  Product4Builder.cpp  Product4Builder.h  Product5Builder.cpp  Product5Builder.h
app/ProductLineAPI/: WebSocketsAPI.h  coreservice.cpp  coreservice.h  grpcapiserver.cpp  grpcapiserver.h  productlineapi.cpp  productlineapi.h  websocketsapi.cpp
cmake/: ProductConfig.cmake
cmake/CMakeModules/: AssetLinkHelper.cmake
cmake/UniqueAsset2/: uniqueasset2.cpp
cmake/UniqueAsset4/: uniqueasset4.cpp
cmake/XXProductLineApplication/: CMakeLists.txt  ProductBuilder.cmake  mainwindow.cpp  mainwindow.h
cmake/XXProductLineApplication/ProductBuilder/: ProductBuilderFactory.cpp  ProductBuilderFactory.h
cmake/XXProductLineApplication/ProductLineAPI/: GrpcAPI.h  ProductLineAPI.cmake  productline_api.pb.h  productlineapi.cpp  productlineapi.h
cmake/XXProductLineTests/: CMakeLists.txt
cmake/XXProductLineTests/SharedAssets/: SharedAssetsTest.cmake
cmake/XXProductLineTests/UniqueAsset1/: UniqueAsset1Test.cmake
cmake/XXProductLineTests/UniqueAsset2/: UniqueAsset2Test.cmake
cmake/XXProductLineTests/UniqueAsset3/: UniqueAsset3Test.cmake
cmake/XXProductLineTests/UniqueAsset4/: UniqueAsset4Test.cmake
examples/: README.md  cpp_client.cpp
libs/: CMakeLists.txt
libs/pl_core/: CMakeLists.txt
libs/pl_core/include/pl_core/: sharedassets.h
libs/pl_core/src/: sharedassets.cpp
libs/pl_proto/: CMakeLists.txt
libs/unique_asset1/: CMakeLists.txt
libs/unique_asset1/include/: UniqueAsset1_global.h  uniqueasset1.h
libs/unique_asset1/src/: uniqueasset1.cpp  uniqueasset1service.cpp  uniqueasset1service.h
libs/unique_asset2/: CMakeLists.txt
libs/unique_asset2/include/: UniqueAsset2_global.h  uniqueasset2.h
libs/unique_asset2/src/: uniqueasset2.cpp  uniqueasset2service.cpp  uniqueasset2service.h
libs/unique_asset3/: CMakeLists.txt
libs/unique_asset3/include/: UniqueAsset3_global.h  uniqueasset3.h
libs/unique_asset3/src/: uniqueasset3.cpp  uniqueasset3service.cpp  uniqueasset3service.h
libs/unique_asset4/: CMakeLists.txt
libs/unique_asset4/include/: UniqueAsset4_global.h  uniqueasset4.h
libs/unique_asset4/src/: uniqueasset4.cpp  uniqueasset4service.cpp  uniqueasset4service.h
proto/: common.proto  pl_core.proto  unique_asset1.proto  unique_asset2.proto  unique_asset3.proto  unique_asset4.proto
qmake/XXProductLineApplication/: XXProductLineApplication.pro
qmake/XXProductLineApplication/ProductLineAPI/: ProductLineAPI.pri  grpcapi.cpp  productline_api.grpc.pb.cc  productline_api.grpc.pb.h  productline_api.pb.cc  productline_api.proto  productlineapi.cpp  productlineapi.h
tests/: CMakeLists.txt  test_grpc_api.cpp  test_pl_core.cpp  test_unique_asset1.cpp  test_unique_asset2.cpp  test_unique_asset3.cpp  test_unique_asset4.cpp
